--- a/WeatherApp/package.json
+++ b/WeatherApp/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "bootstrap": "^5.3.6",
-    "ionicons": "^8.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0",
+    "sass": "^1.88.0",
+    "scss": "^0.2.4",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
